# scit-package

./: .gitignore  README.md  cython.nix  docs.nix  notebook_to_pdf.py  pyproject.toml  requirements.txt  set_debug.py  setup.py  shell.nix
docs/source/: conf.py  index.rst  modules.rst  sparscit.advanced.default.rst  sparscit.advanced.plotting.rst  sparscit.advanced.rst  sparscit.embedding.rst  sparscit.graph.rst  sparscit.plotting.rst  sparscit.tools.rst  src.advanced.default.rst  src.advanced.plotting.rst  src.advanced.rst  src.embedding.rst  src.graph.rst  src.load.rst  src.plotting.int.rst  src.plotting.rst  src.rst  src.tools.rst  tutorial.rst
docs/source/notebooks/: call_markers.ipynb  infer_process.ipynb  make_landscape.ipynb  single.ipynb  tutorial.ipynb  void_state.ipynb
src/: _logging.py  _settings.py
src/_utils/: __init__.py
src/advanced/: __init__.py  _community.py  _cv2.py  _dbscan.py  _distances.py  _dynamics.py  _hmm_data.py  _landscape_config.py
src/advanced/hl/: __init__.py  _get.py  _plot.py
src/advanced/plotting/: _2d.py  _3d.py  __init__.py  _dendrogram.py  _features.py  _summary.py
src/embedding/: __init__.py  _landscape.py  _pca.py  _spectral.py  _umap.py
src/graph/: _community.py  _neighbors.py  _transfer.py
src/plotting/: _embeddings.py  _heatmap.py  _hist.py  _metabin.py  _quadrant.py  _statistics.py
src/plotting/int/: _scatter.py  _violin.py
src/sparscit/: __init__.py  _logging.py  _settings.py
src/tools/: _basic_stats.py  _combine.py  _cstats.pyx  _diffmap.py  _filter.py  _load.py  _metabin.py  _metadata.py  _statistics.py
(+78 files in other folders)
